# actix_web_bootish

./: .env  Cargo.toml  Dockerfile  README.md
migrations/: 20250406105006_init.sql
src/: api_swagger_config.rs  config.rs  database.rs  main.rs
src/handlers/: home_handler.rs
src/models/: user.rs
src/routes/: home_route.rs  mod.rs
src/utils/: date_format.rs  mod.rs  redis_service_util.rs  rest_client.rs
