[package]
name = "actix_web_boot_app"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-service = "2"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.29.1", features = ["tokio-native-tls-comp"] }
once_cell = "1.20.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
    "chrono",
    "migrate",
    "uuid",
] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
awc = { version = "3", features = ["rustls"] }
utoipa = { version = "5.3.1", features = [
    "actix_extras",
    "time",
    "chrono",
    "uuid",
] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
